[tool.poetry]
name = "rescue-lotteries"
version = "0.1.0"
description = ""
authors = ["jpcars"]
readme = "README.md"
packages = [{include = "lotteries"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
sympy = "^1.11.1"
scipy = "^1.10.0"
streamlit = "^1.19.0"
streamlit-tags = "1.2.8"
pynauty = {path = "pynauty-2.8.6.tar.gz",develop = true}
hypernetx = "^2.0.0.post1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
jupyter = "^1.0.0"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core>=1.3.1"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
