[tool.poetry]
name = "rescue-lotteries"
version = "0.1.0"
description = ""
authors = ["jpcars"]
readme = "README.md"
packages = [{include = "lotteries"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
sympy = "^1.11.1"
scipy = "^1.10.0"
streamlit = "^1.19.0"
streamlit-tags = "1.2.8"
pynauty = { url = "https://files.pythonhosted.org/packages/d0/b5/45698dcf656eec5e3d403864502f074dd62a95a3ced41056ea7158616efa/pynauty-2.8.6.tar.gz" }
hypernetx = "^2.0.0.post1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.3.1"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
